Fixed cert alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,6 +192,10 @@ nav ul li {
     padding: 1rem;
 }
 
+.cert-container p {
+    padding: 0.4rem;
+}
+
 .cert-title {
     margin-bottom: var(--bottom-margin);
 }
